--- a/mm-01/index.html
+++ b/mm-01/index.html
@@ -4,7 +4,7 @@
 	<title>Решение уравнений методом Гаусса</title>
 	<link rel="stylesheet" href="style.css">
 <body>
-	<div class="wrapper">
+	<div id="wrapper">
 		<h1>Решение уравнений методом Гаусса</h1>
 		<div class="row">
 			<table id="system">
